<resources>
    <string name="app_name">JobFinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="you_have_not_had_an_account_yet">You have not had an account yet?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="input_data">Input data</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="forgot_password">Forgot password</string>
    <string name="_continue">Continue</string>
    <string name="invalid_otp_code">Invalid OTP code</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="i_want_a_job">I want a job</string>
    <string name="i_want_a_employee">I want a employee</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="what_job_you_want">What job you want?</string>
    <string name="select_one_more_skill_for_you">Select one more skill for you.</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="upload_photo_profile">Upload Photo Profile</string>
    <string name="confirm">Confirm</string>
    <string name="please_input_your_email_or_phone_number_to_search_for_your_account">Please input your email or phone number to search for your account</string>
    <string name="input_email_or_phone_number">Input email or phone number</string>
    <string name="select_which_contact_details_should_we_use_to_reset_you_password">Select which contact details should we use to reset you password</string>
    <string name="via_sms">via SMS:</string>
    <string name="via_email">via Email:</string>
    <string name="go_to_login">Go to login</string>
    <string name="your_account_is_ready_to_use">Your account is ready to use</string>
    <string name="congrats">Congrats!</string>
    <string name="username">Username</string>
    <string name="input_your_password">Input your password</string>
    <string name="input_your_username_or_email">Input your username or email</string>
    <string name="active_account">Active account</string>
    <string name="code_has_been_send_to_s">Code has been send to %s</string>
    <string name="active">Active</string>
    <string name="resend_code_in_s_s">Resend code in %ss</string>
    <string name="active_account_successful">Active account successful!</string>
    <string name="continue_to_register">Continue to register</string>
    <string name="go_to_homepage">Go to homepage</string>
    <string name="recovery_account_successful">Recovery account successful!</string>
    <string name="verify_email">Verify email</string>
    <string name="your_email_s_is_verified">Your email (%s) is verified!</string>
    <string name="create_profile">Create profile</string>
    <string name="your_province">Your province</string>
    <string name="enter_province">Enter province</string>
    <string name="input_here">Input here</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="applications">Applications</string>
    <string name="search">Search</string>
    <string name="see_all">See all</string>
    <string name="tips_for_you">Tips for you</string>
    <string name="job_recommendation">Job Recommendation</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="security">Security</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="tip_for_you">Tip for you</string>
    <string name="read_more">Read more</string>
</resources>
