<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.hieuminh.jobfinder.views.customs.header.HeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/reset_password" />

        <com.hieuminh.jobfinder.views.customs.EditView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:view_title="@string/new_password" />

        <com.hieuminh.jobfinder.views.customs.EditView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:view_title="@string/confirm_new_password" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:text="@string/remember_me" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_32"
        android:background="@drawable/bg_border_common_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

</LinearLayout>
