<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/dp_32"
            android:layout_weight="1"
            android:src="@drawable/ic_job_finder"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_in_to_your_account"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginVertical="@dimen/dp_32"
        android:orientation="vertical">

        <include
            layout="@layout/item_input_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/item_input_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/remember_me" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/bg_border_common_button"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/forgot_the_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_24"
            android:gravity="center_horizontal"
            android:text="@string/or_continue_with"
            android:textSize="@dimen/sp_13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:text="@string/facebook"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:text="@string/google"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_24"
            android:gravity="center_horizontal"
            android:text="@string/already_have_an_account_sign_in"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</LinearLayout>

