<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".views.fragments.RegisterFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sign_up_for_free"
        android:textSize="@dimen/sp_18" />

    <com.hieuminh.jobfinder.views.customs.EditView
        android:id="@+id/ev_email"
        app:view_title="Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16" />

    <include
        layout="@layout/item_input_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        layout="@layout/item_input_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cb_remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:text="@string/remember_me" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_border_common_button"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

</LinearLayout>
